# therealflamingo

./: .gitignore  Makefile  README.md
therealflamingo/: Cargo.toml
therealflamingo-ui/: package-lock.json  package.json
therealflamingo-ui/src/: App.svelte  global.d.ts  home.svelte
therealflamingo-ui/src/NavigationBar/: navigationbar.svelte
therealflamingo-ui/src/krydsliste/: krydslistegenerator.svelte
therealflamingo/src/: main.rs
therealflamingo/src/pdf_generators/: cross_list_generator.rs  mod.rs
